[package]
name = "orc-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
sysinfo = { version = "0.30.4", features = ["serde"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
env_logger = "0.10.1"
